--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,6 +1,9 @@
 # SITE SETUP
 # Documentation: https://sourcethemes.com/academic/
 
+GithubEdit = "https://github.com/rpodcast/shinydevseries_site/edit/master/content/"
+GithubSource = "https://github.com/rpodcast/shinydevseries_site/blob/master/content/"
+
 # Color theme.
 #   Choose from `default`, `ocean`, `forest`, `dark`, `apogee`, `1950s`, `coffee`, `cupcake`.
 color_theme = "ocean"
