slight change to dev env files

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -6,3 +6,5 @@ USERID=1000
 GROUPID=1000
 PASSWORD=1rstudio
 VOLUME_PATH=/home/eric/shinydevseries_projects/shinydevseries_site
+LOCAL_PORT=8711
+CONTAINER_NAME=rstudioshinydevseriessite
