--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/academic"]
-	path = themes/academic
-	url = https://github.com/gcushen/hugo-academic.git
+[submodule "themes/hugo-apero"]
+	path = themes/hugo-apero
+	url = https://github.com/hugo-apero/hugo-apero.git
