fix: add freeze dir

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,9 @@
 project:
   type: website
 
+execute:
+  freeze: auto
+
 website:
   title: "Shiny Developer Series"
   site-url: https://shinydevseries.com
