--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,8 +26,6 @@ website:
     tools:
     - icon: github
       href: https://github.com/shinydevseries/site_rewrite_quarto
-    - icon: rss
-      href: blog/index.xml
     
     right:
       - text: Interviews
@@ -41,6 +39,20 @@ website:
       #- text: Contact
       #  href: contact/index.qmd
 
+  page-footer:
+    left: >-
+      &#169; 2025 Eric Nantz &#8729; Made with [Quarto](https://quarto.org)
+    center: |
+      <a class="link-dark me-1" href="https://bsky.app/profile/rpodcast.bsky.social" title="Bluesky" target="_blank" rel="noopener">{{< fa brands bluesky >}}</a>
+      <a class="link-dark me-1" href="https://podcastindex.social/@rpodcast" title="Mastodon" target="_blank" rel="noopener">{{< fa brands mastodon >}}</a>
+      <a class="link-dark me-1" href="https://www.linkedin.com/in/eric-nantz-6621617/" title="LinkedIn" target="_blank" rel="noopener">{{< fa brands linkedin >}}</a>
+      <a class="link-dark me-1" href="https://orcid.org/0000-0001-8104-7510" title="orcid" target="_blank" rel="noopener">{{< ai orcid >}}</a>
+    right: 
+      - text: "License"
+        aria-label: "License Details"
+        href: license.qmd
+      - icon: rss
+        href: blog/index.xml
 format:
   html:
     theme:
