fix: switch to Giscus (closes #56)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,11 +18,9 @@ website:
     site: "@theRcast"
     card-style: summary_large_image
   comments:
-    utterances:
+    giscus: 
       repo: shinydevseries/shinydevseries_site
-      label: utterances
-      theme: body-light
-      issue-term: title
+      mapping: title
     
   navbar:
     logo: assets/img/shinydevseries_hex.png
