reduce size of image thumbnail in blog post listing (closes #53)

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,6 +60,8 @@ format:
       light:
         - cosmo
         - assets/sds-theme-light.scss
+        - assets/misc.scss
       dark:
         - solar
         - assets/sds-theme-dark.scss
+        - assets/misc.scss
